# SQLBot-Sakila-SQLite

./: .env.example  .gitignore  README.md  pyproject.toml
.dbt/: .user.yml  profiles.yml
.sqlbot/: config.yml
.sqlbot/agents/: sakila_knowledge.md
.sqlbot/profiles/Sakila/: system_prompt.txt
.sqlbot/profiles/Sakila/models/: sources.yml
