[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlbot-sakila-sqlite-example"
version = "0.1.0"
description = "Example project demonstrating SQLBot with Sakila SQLite database"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "SQLBot Example"}
]
keywords = ["database", "dbt", "ai", "sql", "sakila", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlbot>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/AnthusAI/SQLBot"
Repository = "https://github.com/AnthusAI/SQLBot.git"
Issues = "https://github.com/AnthusAI/SQLBot/issues"

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ['py311']